[package]
name = "foreground_scheduler"
version = "2020.507.1304"
authors = ["Luciano Bestia <luciano.bestia@gmail.com>"]
edition = "2018"
description = "runs a command at interval in foreground"
repository = "https://github.com/LucianoBestia/foreground_scheduler"
readme = "README.md"
license = "MIT"
keywords = ["CLI"]
categories = ["development-tools::build-utils"]
publish = false

[dependencies]
unwrap = "1.2.1"
clap = "2.33.0"
ansi_term = "0.12.1"
chrono="0.4.11"

[badges]
maintenance = { status = "passively-maintained" }					
