[package]
name = "foreground_scheduler"
version = "2022.622.1243"
authors = ["bestia.dev"]
homepage = "https://bestia.dev"
edition = "2021"
description = "runs a command at interval in foreground"
repository = "https://github.com/bestia-dev/foreground_scheduler"
readme = "README.md"
license = "MIT"
keywords = ["CLI"]
categories = ["development-tools::build-utils"]
publish = false

[dependencies]
unwrap = "1.2.1"
clap = "2.33.0"
ansi_term = "0.12.1"
chrono="0.4.11"
					
